daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: python-http
  namespace: python-http
spec:
  selector:
    matchLabels:
      app: python-http
  template:
    metadata:
      labels:
        app: python-http
    spec:
      containers:
      - name: python-http
        ports:
        - name: web
          containerPort: 80
        image: docker.io/python:3.9.14-alpine3.15
        command:
        - python
        - /var/run/server/server.py
        resources:
          requests:
            cpu: 250m
        volumeMounts:
        - mountPath: var/run/server
          name: server
        - mountPath: /etc/certs
          name: certs
      volumes:
      - name: certs
        emptyDir: {}
      - name: server
        configMap:
          name: python-http
