nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http-nodeport
  namespace: python-http
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    targetPort: web
    nodePort: 30080
  selector:
    app: python-http
