service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http
  namespace: python-http
spec:
  ports:
  - name: web
    port: 80
    targetPort: web
  selector:
    app: python-http
